scribble-test/src/test/resources/bad/reach/globals/gdo/pack1/Test03b.scr
module bad.reach.globals.gdo.pack1.Test03b;


import bad.reach.globals.gdo.Test03;


global protocol Bar(role C, role D)
{
	3() from C to D;
	do bad.reach.globals.gdo.Test03.Foo(C, D);
}

